metadata-ingestion/src/datahub/ingestion/source/.antlr/ThriftGrammerParser.java
// Generated from /home/waylee/datahub/metadata-ingestion/src/datahub/ingestion/source/ThriftGrammer.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ThriftGrammerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, INTEGER=37, HEX_INTEGER=38, 
		DOUBLE=39, TYPE_BOOL=40, TYPE_BYTE=41, TYPE_I16=42, TYPE_I32=43, TYPE_I64=44, 
		TYPE_DOUBLE=45, TYPE_STRING=46, TYPE_BINARY=47, LITERAL=48, IDENTIFIER=49, 
		COMMA=50, WS=51, SL_COMMENT=52, ML_COMMENT=53;
	public static final int
		RULE_document = 0, RULE_header = 1, RULE_include_ = 2, RULE_namespace_ = 3, 
		RULE_cpp_include = 4, RULE_definition = 5, RULE_const_rule = 6, RULE_typedef_ = 7, 
		RULE_enum_rule = 8, RULE_enum_field = 9, RULE_senum = 10, RULE_struct_ = 11, 
		RULE_union_ = 12, RULE_exception = 13, RULE_service = 14, RULE_field = 15, 
		RULE_field_id = 16, RULE_field_req = 17, RULE_function_ = 18, RULE_oneway = 19, 
		RULE_function_type = 20, RULE_throws_list = 21, RULE_type_annotations = 22, 
		RULE_type_annotation = 23, RULE_annotation_value = 24, RULE_field_type = 25, 
		RULE_base_type = 26, RULE_container_type = 27, RULE_map_type = 28, RULE_set_type = 29, 
		RULE_list_type = 30, RULE_cpp_type = 31, RULE_const_value = 32, RULE_integer = 33, 
		RULE_const_list = 34, RULE_const_map_entry = 35, RULE_const_map = 36, 
		RULE_list_separator = 37, RULE_real_base_type = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "header", "include_", "namespace_", "cpp_include", "definition", 
			"const_rule", "typedef_", "enum_rule", "enum_field", "senum", "struct_", 
			"union_", "exception", "service", "field", "field_id", "field_req", "function_", 
			"oneway", "function_type", "throws_list", "type_annotations", "type_annotation", 
			"annotation_value", "field_type", "base_type", "container_type", "map_type", 
			"set_type", "list_type", "cpp_type", "const_value", "integer", "const_list", 
			"const_map_entry", "const_map", "list_separator", "real_base_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'include'", "'namespace'", "'*'", "'cpp_namespace'", "'php_namespace'", 
			"'cpp_include'", "'const'", "'='", "'typedef'", "'enum'", "'{'", "'}'", 
			"'senum'", "'struct'", "'union'", "'exception'", "'service'", "'extends'", 
			"':'", "'required'", "'optional'", "'('", "')'", "'oneway'", "'async'", 
			"'void'", "'throws'", "'map'", "'<'", "'>'", "'set'", "'list'", "'cpp_type'", 
			"'['", "']'", "';'", null, null, null, "'bool'", "'byte'", "'i16'", "'i32'", 
			"'i64'", "'double'", "'string'", "'binary'", null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "INTEGER", "HEX_INTEGER", "DOUBLE", "TYPE_BOOL", "TYPE_BYTE", "TYPE_I16", 
			"TYPE_I32", "TYPE_I64", "TYPE_DOUBLE", "TYPE_STRING", "TYPE_BINARY", 
			"LITERAL", "IDENTIFIER", "COMMA", "WS", "SL_COMMENT", "ML_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ThriftGrammer.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ThriftGrammerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class DocumentContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ThriftGrammerParser.EOF, 0); }
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(78);
				header();
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__6) | (1L << T__8) | (1L << T__9) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16))) != 0)) {
				{
				{
				setState(84);
				definition();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(90);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public Include_Context include_() {
			return getRuleContext(Include_Context.class,0);
		}
		public Namespace_Context namespace_() {
			return getRuleContext(Namespace_Context.class,0);
		}
		public Cpp_includeContext cpp_include() {
			return getRuleContext(Cpp_includeContext.class,0);
		}
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_header);
		try {
			setState(95);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				include_();
				}
				break;
			case T__1:
			case T__3:
			case T__4:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				namespace_();
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				cpp_include();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_Context extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(ThriftGrammerParser.LITERAL, 0); }
		public Include_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_; }
	}

	public final Include_Context include_() throws RecognitionException {
		Include_Context _localctx = new Include_Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_include_);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__0);
			setState(98);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Namespace_Context extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(ThriftGrammerParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ThriftGrammerParser.IDENTIFIER, i);
		}
		public TerminalNode LITERAL() { return getToken(ThriftGrammerParser.LITERAL, 0); }
		public Namespace_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namespace_; }
	}

	public final Namespace_Context namespace_() throws RecognitionException {
		Namespace_Context _localctx = new Namespace_Context(_ctx, getState());
		enterRule(_localctx, 6, RULE_namespace_);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				match(T__1);
				setState(101);
				match(T__2);
				setState(102);
				_la = _input.LA(1);
				if ( !(_la==LITERAL || _la==IDENTIFIER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				match(T__1);
				setState(104);
				match(IDENTIFIER);
				setState(105);
				_la = _input.LA(1);
				if ( !(_la==LITERAL || _la==IDENTIFIER) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(106);
				match(T__3);
				setState(107);
				match(IDENTIFIER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(108);
				match(T__4);
				setState(109);
				match(IDENTIFIER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cpp_includeContext extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(ThriftGrammerParser.LITERAL, 0); }
		public Cpp_includeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cpp_include; }
	}

	public final Cpp_includeContext cpp_include() throws RecognitionException {
		Cpp_includeContext _localctx = new Cpp_includeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_cpp_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__5);
			setState(113);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Const_ruleContext const_rule() {
			return getRuleContext(Const_ruleContext.class,0);
		}
		public Typedef_Context typedef_() {
			return getRuleContext(Typedef_Context.class,0);
		}
		public Enum_ruleContext enum_rule() {
			return getRuleContext(Enum_ruleContext.class,0);
		}
		public SenumContext senum() {
			return getRuleContext(SenumContext.class,0);
		}
		public Struct_Context struct_() {
			return getRuleContext(Struct_Context.class,0);
		}
		public Union_Context union_() {
			return getRuleContext(Union_Context.class,0);
		}
		public ExceptionContext exception() {
			return getRuleContext(ExceptionContext.class,0);
		}
		public ServiceContext service() {
			return getRuleContext(ServiceContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definition);
		try {
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__6:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				const_rule();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				typedef_();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				enum_rule();
				}
				break;
			case T__12:
				enterOuterAlt(_localctx, 4);
				{
				setState(118);
				senum();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(119);
				struct_();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 6);
				{
				setState(120);
				union_();
				}
				break;
			case T__15:
				enterOuterAlt(_localctx, 7);
				{
				setState(121);
				exception();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				service();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Const_ruleContext extends ParserRuleContext {
		public Field_typeContext field_type() {
			return getRuleContext(Field_typeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public Const_valueContext const_value() {
			return getRuleContext(Const_valueContext.class,0);
		}
		public List_separatorContext list_separator() {
			return getRuleContext(List_separatorContext.class,0);
		}
		public Const_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_const_rule; }
	}

	public final Const_ruleContext const_rule() throws RecognitionException {
		Const_ruleContext _localctx = new Const_ruleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_const_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__6);
			setState(126);
			field_type();
			setState(127);
			match(IDENTIFIER);
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(128);
				match(T__7);
				setState(129);
				const_value();
				}
			}

			setState(133);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__35 || _la==COMMA) {
				{
				setState(132);
				list_separator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Typedef_Context extends ParserRuleContext {
		public Field_typeContext field_type() {
			return getRuleContext(Field_typeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public Typedef_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedef_; }
	}

	public final Typedef_Context typedef_() throws RecognitionException {
		Typedef_Context _localctx = new Typedef_Context(_ctx, getState());
		enterRule(_localctx, 14, RULE_typedef_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(T__8);
			setState(136);
			field_type();
			setState(137);
			match(IDENTIFIER);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(138);
				type_annotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_ruleContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public List<Enum_fieldContext> enum_field() {
			return getRuleContexts(Enum_fieldContext.class);
		}
		public Enum_fieldContext enum_field(int i) {
			return getRuleContext(Enum_fieldContext.class,i);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public Enum_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_rule; }
	}

	public final Enum_ruleContext enum_rule() throws RecognitionException {
		Enum_ruleContext _localctx = new Enum_ruleContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_enum_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__9);
			setState(142);
			match(IDENTIFIER);
			setState(143);
			match(T__10);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(144);
				enum_field();
				}
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(150);
			match(T__11);
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(151);
				type_annotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Enum_fieldContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public List_separatorContext list_separator() {
			return getRuleContext(List_separatorContext.class,0);
		}
		public Enum_fieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enum_field; }
	}

	public final Enum_fieldContext enum_field() throws RecognitionException {
		Enum_fieldContext _localctx = new Enum_fieldContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_enum_field);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(IDENTIFIER);
			setState(157);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__7) {
				{
				setState(155);
				match(T__7);
				setState(156);
				integer();
				}
			}

			setState(160);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(159);
				type_annotations();
				}
			}

			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__35 || _la==COMMA) {
				{
				setState(162);
				list_separator();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SenumContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public List<TerminalNode> LITERAL() { return getTokens(ThriftGrammerParser.LITERAL); }
		public TerminalNode LITERAL(int i) {
			return getToken(ThriftGrammerParser.LITERAL, i);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public List<List_separatorContext> list_separator() {
			return getRuleContexts(List_separatorContext.class);
		}
		public List_separatorContext list_separator(int i) {
			return getRuleContext(List_separatorContext.class,i);
		}
		public SenumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_senum; }
	}

	public final SenumContext senum() throws RecognitionException {
		SenumContext _localctx = new SenumContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_senum);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__12);
			setState(166);
			match(IDENTIFIER);
			setState(167);
			match(T__10);
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LITERAL) {
				{
				{
				setState(168);
				match(LITERAL);
				setState(170);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__35 || _la==COMMA) {
					{
					setState(169);
					list_separator();
					}
				}

				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(177);
			match(T__11);
			setState(179);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(178);
				type_annotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Struct_Context extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public Struct_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct_; }
	}

	public final Struct_Context struct_() throws RecognitionException {
		Struct_Context _localctx = new Struct_Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_struct_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__13);
			setState(182);
			match(IDENTIFIER);
			setState(183);
			match(T__10);
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << INTEGER) | (1L << HEX_INTEGER) | (1L << TYPE_BOOL) | (1L << TYPE_BYTE) | (1L << TYPE_I16) | (1L << TYPE_I32) | (1L << TYPE_I64) | (1L << TYPE_DOUBLE) | (1L << TYPE_STRING) | (1L << TYPE_BINARY) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(184);
				field();
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			match(T__11);
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(191);
				type_annotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Union_Context extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public Union_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_union_; }
	}

	public final Union_Context union_() throws RecognitionException {
		Union_Context _localctx = new Union_Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_union_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			match(T__14);
			setState(195);
			match(IDENTIFIER);
			setState(196);
			match(T__10);
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__19) | (1L << T__20) | (1L << T__27) | (1L << T__30) | (1L << T__31) | (1L << INTEGER) | (1L << HEX_INTEGER) | (1L << TYPE_BOOL) | (1L << TYPE_BYTE) | (1L << TYPE_I16) | (1L << TYPE_I32) | (1L << TYPE_I64) | (1L << TYPE_DOUBLE) | (1L << TYPE_STRING) | (1L << TYPE_BINARY) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(197);
				field();
				}
				}
				setState(202);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(203);
			match(T__11);
			setState(205);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(204);
				type_annotations();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExceptionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(ThriftGrammerParser.IDENTIFIER, 0); }
		public List<FieldContext> field() {
			return getRuleContexts(FieldContext.class);
		}
		public FieldContext field(int i) {
			return getRuleContext(FieldContext.class,i);
		}
		public Type_annotationsContext type_annotations() {
			return getRuleContext(Type_annotationsContext.class,0);
		}
		public ExceptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exception; }
	}
